Changing the dataset

--- a/person_classifier.ipynb
+++ b/person_classifier.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "['./Dataset/DS', './Dataset/MT', './Dataset/PN', './Dataset/WH']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,9 @@
        "  './Dataset/cropped/DS\\\\DS16.png',\n",
        "  './Dataset/cropped/DS\\\\DS17.png',\n",
        "  './Dataset/cropped/DS\\\\DS18.png',\n",
+       "  './Dataset/cropped/DS\\\\DS19.png',\n",
        "  './Dataset/cropped/DS\\\\DS2.png',\n",
+       "  './Dataset/cropped/DS\\\\DS20.png',\n",
        "  './Dataset/cropped/DS\\\\DS3.png',\n",
        "  './Dataset/cropped/DS\\\\DS4.png',\n",
        "  './Dataset/cropped/DS\\\\DS5.png',\n",
@@ -455,6 +457,7 @@
        " 'PN': ['./Dataset/cropped/PN\\\\PN1.png',\n",
        "  './Dataset/cropped/PN\\\\PN10.png',\n",
        "  './Dataset/cropped/PN\\\\PN11.png',\n",
+       "  './Dataset/cropped/PN\\\\PN12.png',\n",
        "  './Dataset/cropped/PN\\\\PN2.png',\n",
        "  './Dataset/cropped/PN\\\\PN3.png',\n",
        "  './Dataset/cropped/PN\\\\PN4.png',\n",
@@ -478,6 +481,7 @@
        "  './Dataset/cropped/WH\\\\WH20.png',\n",
        "  './Dataset/cropped/WH\\\\WH21.png',\n",
        "  './Dataset/cropped/WH\\\\WH22.png',\n",
+       "  './Dataset/cropped/WH\\\\WH23.png',\n",
        "  './Dataset/cropped/WH\\\\WH3.png',\n",
        "  './Dataset/cropped/WH\\\\WH4.png',\n",
        "  './Dataset/cropped/WH\\\\WH5.png',\n",
@@ -487,7 +491,7 @@
        "  './Dataset/cropped/WH\\\\WH9.png']}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +518,7 @@
        "{'DS': 0, 'MT': 1, 'PN': 2, 'WH': 3}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +577,7 @@
        "(59, 59, 3)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,16 +639,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "69"
+       "73"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,16 +659,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(69, 4096)"
+       "(73, 4096)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,16 +701,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5555555555555556"
+       "0.7368421052631579"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
