--- a/person_classifier.ipynb
+++ b/person_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "C:\\Users\\Isara Liyanage\\AppData\\Local\\Temp\\ipykernel_19344\\301377158.py:1: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "C:\\Users\\Isara Liyanage\\AppData\\Local\\Temp\\ipykernel_23424\\301377158.py:1: SyntaxWarning: invalid escape sequence '\\D'\n",
       "  img = cv2.imread('./Dataset\\DS\\dasun-1658591452.jpg')\n"
      ]
     },
@@ -34,7 +34,7 @@
        "(400, 400, 3)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,16 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x256ba975f70>"
+       "<matplotlib.image.AxesImage at 0x2204d96d970>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "(400, 400)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x256bd97fdd0>"
+       "<matplotlib.image.AxesImage at 0x2204fb4c890>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -139,9 +139,9 @@
       "<>:2: SyntaxWarning: invalid escape sequence '\\h'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\h'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\h'\n",
-      "C:\\Users\\Isara Liyanage\\AppData\\Local\\Temp\\ipykernel_19344\\1527002442.py:1: SyntaxWarning: invalid escape sequence '\\h'\n",
+      "C:\\Users\\Isara Liyanage\\AppData\\Local\\Temp\\ipykernel_23424\\1527002442.py:1: SyntaxWarning: invalid escape sequence '\\h'\n",
       "  face_cascade = cv2.CascadeClassifier('./Open CV\\haarcascade_frontalface_default.xml')\n",
-      "C:\\Users\\Isara Liyanage\\AppData\\Local\\Temp\\ipykernel_19344\\1527002442.py:2: SyntaxWarning: invalid escape sequence '\\h'\n",
+      "C:\\Users\\Isara Liyanage\\AppData\\Local\\Temp\\ipykernel_23424\\1527002442.py:2: SyntaxWarning: invalid escape sequence '\\h'\n",
       "  eye_cascade = cv2.CascadeClassifier('./Open CV\\haarcascade_eye.xml')\n"
      ]
     },
@@ -151,7 +151,7 @@
        "array([[176,  34,  59,  59]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "(176, 34, 59, 59)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,16 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x256bd9de630>"
+       "<matplotlib.image.AxesImage at 0x2204d9b18b0>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -256,16 +256,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x256bcd1d010>"
+       "<matplotlib.image.AxesImage at 0x22052013770>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "['./Dataset/DS', './Dataset/MT', './Dataset/PN', './Dataset/WH']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -429,6 +429,13 @@
        "  './Dataset/cropped/DS\\\\DS19.png',\n",
        "  './Dataset/cropped/DS\\\\DS2.png',\n",
        "  './Dataset/cropped/DS\\\\DS20.png',\n",
+       "  './Dataset/cropped/DS\\\\DS21.png',\n",
+       "  './Dataset/cropped/DS\\\\DS22.png',\n",
+       "  './Dataset/cropped/DS\\\\DS23.png',\n",
+       "  './Dataset/cropped/DS\\\\DS24.png',\n",
+       "  './Dataset/cropped/DS\\\\DS25.png',\n",
+       "  './Dataset/cropped/DS\\\\DS26.png',\n",
+       "  './Dataset/cropped/DS\\\\DS27.png',\n",
        "  './Dataset/cropped/DS\\\\DS3.png',\n",
        "  './Dataset/cropped/DS\\\\DS4.png',\n",
        "  './Dataset/cropped/DS\\\\DS5.png',\n",
@@ -446,7 +453,11 @@
        "  './Dataset/cropped/MT\\\\MT16.png',\n",
        "  './Dataset/cropped/MT\\\\MT17.png',\n",
        "  './Dataset/cropped/MT\\\\MT18.png',\n",
+       "  './Dataset/cropped/MT\\\\MT19.png',\n",
        "  './Dataset/cropped/MT\\\\MT2.png',\n",
+       "  './Dataset/cropped/MT\\\\MT20.png',\n",
+       "  './Dataset/cropped/MT\\\\MT21.png',\n",
+       "  './Dataset/cropped/MT\\\\MT22.png',\n",
        "  './Dataset/cropped/MT\\\\MT3.png',\n",
        "  './Dataset/cropped/MT\\\\MT4.png',\n",
        "  './Dataset/cropped/MT\\\\MT5.png',\n",
@@ -458,6 +469,13 @@
        "  './Dataset/cropped/PN\\\\PN10.png',\n",
        "  './Dataset/cropped/PN\\\\PN11.png',\n",
        "  './Dataset/cropped/PN\\\\PN12.png',\n",
+       "  './Dataset/cropped/PN\\\\PN13.png',\n",
+       "  './Dataset/cropped/PN\\\\PN14.png',\n",
+       "  './Dataset/cropped/PN\\\\PN15.png',\n",
+       "  './Dataset/cropped/PN\\\\PN16.png',\n",
+       "  './Dataset/cropped/PN\\\\PN17.png',\n",
+       "  './Dataset/cropped/PN\\\\PN18.png',\n",
+       "  './Dataset/cropped/PN\\\\PN19.png',\n",
        "  './Dataset/cropped/PN\\\\PN2.png',\n",
        "  './Dataset/cropped/PN\\\\PN3.png',\n",
        "  './Dataset/cropped/PN\\\\PN4.png',\n",
@@ -491,7 +509,7 @@
        "  './Dataset/cropped/WH\\\\WH9.png']}"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +536,7 @@
        "{'DS': 0, 'MT': 1, 'PN': 2, 'WH': 3}"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +595,7 @@
        "(59, 59, 3)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,16 +607,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x256bc32d430>"
+       "<matplotlib.image.AxesImage at 0x22051eeca10>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -620,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,16 +657,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "73"
+       "91"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,16 +677,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(73, 4096)"
+       "(91, 4096)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,16 +719,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7368421052631579"
+       "0.7391304347826086"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -734,14 +752,14 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.00      0.00      0.00         1\n",
+      "           0       0.80      0.89      0.84         9\n",
       "           1       1.00      0.83      0.91         6\n",
-      "           2       1.00      0.50      0.67         4\n",
-      "           3       0.70      0.88      0.78         8\n",
+      "           2       0.60      0.75      0.67         4\n",
+      "           3       0.33      0.25      0.29         4\n",
       "\n",
-      "    accuracy                           0.74        19\n",
-      "   macro avg       0.68      0.55      0.59        19\n",
-      "weighted avg       0.82      0.74      0.75        19\n",
+      "    accuracy                           0.74        23\n",
+      "   macro avg       0.68      0.68      0.68        23\n",
+      "weighted avg       0.74      0.74      0.73        23\n",
       "\n"
      ]
     }
