--- a/person_classifier.ipynb
+++ b/person_classifier.ipynb
@@ -767,6 +767,294 @@
    "source": [
     "print(classification_report(y_test, pipe.predict(X_test)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hyperparameter optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import svm\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_params = {\n",
+    "    'svm': {\n",
+    "        'model': svm.SVC(gamma='auto',probability=True),\n",
+    "        'params' : {\n",
+    "            'svc__C': [1,10,100,1000],\n",
+    "            'svc__kernel': ['rbf','linear']\n",
+    "        }  \n",
+    "    },\n",
+    "    'random_forest': {\n",
+    "        'model': RandomForestClassifier(),\n",
+    "        'params' : {\n",
+    "            'randomforestclassifier__n_estimators': [1,5,10]\n",
+    "        }\n",
+    "    },\n",
+    "    'logistic_regression' : {\n",
+    "        'model': LogisticRegression(solver='liblinear',multi_class='auto'),\n",
+    "        'params': {\n",
+    "            'logisticregression__C': [1,5,10]\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>best_score</th>\n",
+       "      <th>best_params</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>svm</td>\n",
+       "      <td>0.762637</td>\n",
+       "      <td>{'svc__C': 1, 'svc__kernel': 'linear'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>random_forest</td>\n",
+       "      <td>0.615385</td>\n",
+       "      <td>{'randomforestclassifier__n_estimators': 10}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>logistic_regression</td>\n",
+       "      <td>0.808791</td>\n",
+       "      <td>{'logisticregression__C': 1}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 model  best_score  \\\n",
+       "0                  svm    0.762637   \n",
+       "1        random_forest    0.615385   \n",
+       "2  logistic_regression    0.808791   \n",
+       "\n",
+       "                                    best_params  \n",
+       "0        {'svc__C': 1, 'svc__kernel': 'linear'}  \n",
+       "1  {'randomforestclassifier__n_estimators': 10}  \n",
+       "2                  {'logisticregression__C': 1}  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = []\n",
+    "best_estimators = {}\n",
+    "import pandas as pd\n",
+    "for algo, mp in model_params.items():\n",
+    "    pipe = make_pipeline(StandardScaler(), mp['model'])\n",
+    "    clf =  GridSearchCV(pipe, mp['params'], cv=5, return_train_score=False)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    scores.append({\n",
+    "        'model': algo,\n",
+    "        'best_score': clf.best_score_,\n",
+    "        'best_params': clf.best_params_\n",
+    "    })\n",
+    "    best_estimators[algo] = clf.best_estimator_\n",
+    "    \n",
+    "df = pd.DataFrame(scores,columns=['model','best_score','best_params'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"best score\" is based on the validation dataset created using the X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Best estimator has the optimized model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9565217391304348"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_estimators['svm'].score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9130434782608695"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_estimators['logistic_regression'].score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_clf = best_estimators['svm']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: joblib in c:\\users\\isara liyanage\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.3.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.3.1 -> 24.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['saved_model.pkl']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib \n",
+    "# Save the model as a pickle in a file \n",
+    "joblib.dump(best_clf, 'saved_model.pkl') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(\"class_dictionary.json\",\"w\") as f:\n",
+    "    f.write(json.dumps(class_dict))"
+   ]
   }
  ],
  "metadata": {
